--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.btn{
+  width: 100px;
+  height: 50px;
+  background-color: gold;
+}
+
+.contador-container{
+  display: flex;
+  flex-direction: row;
+  width: 300px;
+  justify-content: space-around;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
